fix scrollbar issue

--- a/css/site.css
+++ b/css/site.css
@@ -39,4 +39,5 @@ h1 {
 
 pre {
 	line-height: 1em;
+	overflow-y: hidden;
 }
